<resources>
    <string name="app_name">FittDroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heightcm">Height(cm):</string>
    <string name="weightkg">Weight(kg):</string>
    <string name="waistcm">Waist(cm):</string>
    <string name="hipcm">Hip(cm):</string>
    <string name="neckcm">Neck(cm):</string>
    <string name="gender">Gender:</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="calc">Calculate</string>
    <string name="SignedOut">Signed Out</string>
    <string name="unsuccesfullSignOut">Unsuccesfull Sign Out</string>
    <string name="default_web_client">459403664713-at64jc06eni7vt1tims8gfd1ofqmnr41.apps.googleusercontent.com</string>
    <string name="noLastUpdate">Statistics Not Found!</string>
    <string name="muscle1">Muscle1</string>
    <string name="muscle2">Muscle2</string>
    <string name="title_activity_my_workout_details">MyWorkoutDetailsActivity</string>
    <string name="add">Add</string>
    <string name="Ok">Ok</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="setandreps">Set And Reps</string>
    <string name="newWorkoutName">New Workout Name</string>
    <string name="added">Added</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
</resources>
